...
        binder.bind().to(factory: FakeModeCell.init)

        binder
            .bind(SettingsItem.self)
            .intoCollection()
            .to { (viewController: Provider<FakeModeSettingsSplitViewController>) -> SettingsItem in
                let item = SettingsItem(title: "Fake Mode", viewControllerProvider: viewController, rank: 99)

                return item
            }
    }
}

...

    init(processInfo: ProcessInfo) {
        self.processInfo = processInfo

        super.init(style: .default, reuseIdentifier: nil)

        `switch`.isOn = processInfo.environment["USE_FAKES"] == "YES"
        `switch`.addTarget(self, action: #selector(valueChanged), for: .touchUpInside)

        textLabel?.text = "Fake Mode Enabled"

        accessoryView = `switch`
        selectionStyle = .none
...
