...
        
        // Make the "UseGreenCell" table view cell available
        binder
            .bind()
            .to(factory: UseGreenCell.init)

        // Add "Members" as a tab bar item in our root view controller
        binder
            .bind(RootTabBarItem.self)
            .intoCollection()
            .to { (membersViewController: MembersViewController) -> RootTabBarItem in
                let navController = UINavigationController(rootViewController: membersViewController)
                return RootTabBarItem(viewController: navController, rank: 0)
...

        super.init(style: .default, reuseIdentifier: nil)

        `switch`.isOn = self.settings.useGreen
        `switch`.addTarget(self, action: #selector(valueChanged), for: .touchUpInside)

        textLabel?.text = "Use Green Cell Text"
        accessoryView = `switch`
        selectionStyle = .none
    }

    @available(*, unavailable)
    required init?(coder aDecoder: NSCoder) {
...
