...
        // Add "Repositories Settings" to the settings view controller
        binder
            .bind(SettingsItem.self)
            .intoCollection()
            .to {
                SettingsItem(
                    title: "Repositories",
                    viewControllerProvider: ($0 as Provider<RepositoriesSettingsSplitViewController>),
                    rank: 0
                )
            }
    }
}
...
        self.settings = settings
        super.init(style: .default, reuseIdentifier: nil)

        `switch`.isOn = settings.showWatcherCount
        `switch`.addTarget(self, action: #selector(valueChanged), for: .touchUpInside)

        textLabel?.text = "Show Watcher Count"

        accessoryView = `switch`
        selectionStyle = .none
    }

    @objc private func valueChanged() {
...
